# stm32-datalogger

./: .cproject  .gitignore  .mxproject  .project  CLAUDE.md  PLAN.md  README.md  STM32F107VCTX_FLASH.ld  build.ps1  debug.ps1  flash.ps1  stm32_datalogger.ioc
App/: README.md  pyproject.toml
App/datalogger/: __init__.py  cli.py  download.py  gui.py  protocol.py  records.py  timesync.py  transport.py
App/tests/: test_protocol.py  test_records.py
Core/Inc/: FreeRTOSConfig.h  board.h  datalogger.h  main.h  proto.h  records.h  rtc_time.h  sd_spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  task_gpio.h  task_sampler.h  task_storage.h  task_usb.h  tusb_config.h
Core/Src/: board.c  main.c  proto.c  records.c  rtc_time.c  sd_spi.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  system_stm32f1xx.c  task_gpio.c  task_sampler.c  task_storage.c  task_usb.c  usb_descriptors.c  user_diskio.c
Debug/: makefile  sources.mk
Debug/Core/Src/: subdir.mk
Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
